--- a/index.html
+++ b/index.html
@@ -667,8 +667,8 @@
                     <div class="modal-content ">
                         <!-- Заголовок модального окна -->
                         <div class="modal-header sportsmen_modal-header">
-                            <button type="button" class="close" data-dismiss="modal"
-                                    aria-hidden="true"><img src="src/icon/x.svg" alt="reily"/>
+                            <button type="button" class="close close-popup" data-dismiss="modal"
+                                    aria-hidden="true">
                             </button>
                             <h4 class="modal-title">Host Olympian Day</h4>
                         </div>
@@ -723,8 +723,8 @@
         <div class="modal-content">
             <!-- Заголовок модального окна -->
             <div class="modal-header sportsmen_modal-header">
-                <button type="button" class="close" data-dismiss="modal"
-                        aria-hidden="true">×
+                <button type="button" class="close close-popup" data-dismiss="modal"
+                        aria-hidden="true">
                 </button>
                 <h4 class="modal-title">Team</h4>
             </div>
@@ -759,8 +759,8 @@
         <div class="modal-content">
             <!-- Заголовок модального окна -->
             <div class="modal-header sportsmen_modal-header">
-                <button type="button" class="close" data-dismiss="modal"
-                        aria-hidden="true">×
+                <button type="button" class="close close-popup" data-dismiss="modal"
+                        aria-hidden="true">
                 </button>
                 <h4 class="modal-title">Team</h4>
             </div>
@@ -794,8 +794,8 @@
         <div class="modal-content">
             <!-- Заголовок модального окна -->
             <div class="modal-header sportsmen_modal-header">
-                <button type="button" class="close" data-dismiss="modal"
-                        aria-hidden="true">×
+                <button type="button" class="close close-popup" data-dismiss="modal"
+                        aria-hidden="true">
                 </button>
                 <h4 class="modal-title">Testimonial</h4>
             </div>
